--- a/web/package.json
+++ b/web/package.json
@@ -20,12 +20,14 @@
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-router": "^1.120.11",
     "@tanstack/react-router-devtools": "^1.120.11",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "keycloak-js": "^26.2.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-spinners": "^0.17.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7"
   },
