--- a/api/src/main/resources/application-dev.yml
+++ b/api/src/main/resources/application-dev.yml
@@ -3,8 +3,8 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8088/realms/bot-forge
-          jwk-set-uri: http://localhost:8088/realms/bot-forge/protocol/openid-connect/certs
+          issuer-uri: http://localhost:8088/realms/cere-os
+          jwk-set-uri: http://localhost:8088/realms/cere-os/protocol/openid-connect/certs
   ai:
     openai:
       api-key: jaskdjaskdj312adkasjdkl
