--- a/api/src/main/resources/application-dev.yml
+++ b/api/src/main/resources/application-dev.yml
@@ -5,6 +5,6 @@ spring:
         jwt:
           issuer-uri: http://localhost:8088/realms/cere-os
           jwk-set-uri: http://localhost:8088/realms/cere-os/protocol/openid-connect/certs
-  ai:
-    openai:
-      api-key: jaskdjaskdj312adkasjdkl
+  docker:
+    compose:
+      lifecycle-management: start_only
