--- a/api/compose.yaml
+++ b/api/compose.yaml
@@ -38,5 +38,17 @@ services:
     volumes:
       - ./dev-environment/keycloak/realms/:/opt/keycloak/data/import/
 
+  elasticsearch:
+    container_name: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:9.0.1
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+    ports:
+      - '9200:9200'
+    volumes:
+      - es_data:/usr/share/elasticsearch/data'
+
 volumes:
   pg_data:
+  es_data:
