--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,9 @@
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-router": "^1.120.11",
     "@tanstack/react-router-devtools": "^1.120.11",
+    "@tiptap/pm": "^3.0.0-beta.5",
+    "@tiptap/react": "^3.0.0-beta.5",
+    "@tiptap/starter-kit": "^3.0.0-beta.5",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
