--- a/web/package.json
+++ b/web/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^19.1.0",
     "react-spinners": "^0.17.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
